accessibility vs non-accessibility

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         <h3>Hobbies</h3>
         1. Playing Football 2. Playing Badminton 3. Swimming
       </div>
-      <!-- hobby ends here  -->
 
-      <!-- education starts here  -->
-      <div id="education"></div>
-      <!-- education ends here  -->
+      <!-- hobby ends here  -->
 
       <!-- contact starts here  -->
       <div id="contact">
@@ -63,13 +60,14 @@
             Name:
             <input type="text" name="name" id="name" required />
           </div>
+
           <div>
             Email:
             <input type="email" name="email" id="email" required />
           </div>
 
           <div>
-            Password
+            Password:
             <input type="password" name="password" id="password" required />
             <div>Pasword must be at least 8 character long</div>
           </div>
@@ -104,6 +102,7 @@
               rows="10"
             ></textarea>
           </div>
+          <br />
           <div>
             <button type="submit">Register</button>
             <button type="reset">Reset</button>
@@ -112,10 +111,12 @@
       </div>
       <!-- contact ends here  -->
 
+      <!-- footer starts here  -->
       <div id="footer">
         <a href="http://stduywithanis.com" target="_blank">visit</a>
         <p>Developed by Anisul Islam with &hearts;</p>
       </div>
+      <!-- footer ends here  -->
     </div>
     <!-- main ends here  -->
   </body>
